@@ -279,6 +279,7 @@ string ResourceManager::strings[] = {
 "Nick", 
 "Your nick was already taken, please change to something else!", 
 " (Nick unknown)", 
+" not shared; calculated CRC32 does not match the one found in SFV file.", 
 "No", 
 "No directory specified", 
 "You're trying to download from yourself!", 
@@ -879,6 +880,7 @@ string ResourceManager::names[] = {
 "Nick", 
 "NickTaken", 
 "NickUnknown", 
+"NoCrc32Match", 
 "NoStr", 
 "NoDirectorySpecified", 
 "NoDownloadsFromSelf", 
